// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get-document-blueprint-siblings should get sibling blueprints 1`] = `
{
  "content": [
    {
      "text": "{"totalBefore":0,"totalAfter":2,"items":[{"documentType":{"id":"00000000-0000-0000-0000-000000000000","icon":"icon-home color-blue","collection":null},"isFolder":false,"name":"_Test Sibling Blueprint 1","id":"00000000-0000-0000-0000-000000000000","parent":{"id":"00000000-0000-0000-0000-000000000000"},"flags":[],"hasChildren":false}]}",
      "type": "text",
    },
  ],
}
`;

exports[`get-document-blueprint-siblings should handle non-existent target 1`] = `
{
  "content": [
    {
      "text": "Error using get-document-blueprint-siblings:
{
  "message": "Request failed with status code 404",
  "response": ""
}",
      "type": "text",
    },
  ],
}
`;
